--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 hello kaifiiiii
 thanks dear for always there for me......understanding my feelins and all......luv... :)
+allah bless u dear with lots of happiness and success in your life inshallah.....
